[package]
name = "webull_unofficial"
version = "1.1.1"
authors = ["Jordan Wambaugh"]
edition = "2021"
description = "The unofficial Rust interface for the WeBull API"
license = "MIT"
repository = "https://github.com/JWambaugh/webull_unofficial"
keywords = ["webull", "trading", "api", "finance", "stocks"]
categories = ["api-bindings", "finance"]
readme = "README.md"
documentation = "https://docs.rs/webull_unofficial/latest/webull_unofficial/"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
md5 = "0.7"
url = "2.3"
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
base64 = "0.21"
rumqttc = { version = "0.24", features = ["websocket"] }
async-trait = "0.1"
once_cell = "1.17"
parking_lot = "0.12"
regex = "1.7"
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.10"
dotenv = "0.15"
mockito = "1.0"
rpassword = "7.2"
dirs = "5.0"

[features]
default = []
paper_trading = []
